# superseded

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  package-lock.json  playwright.config.ts  prd.md  pyproject.toml  start.sh
.superseded/: rules.md
docs/adrs/: 2026-04-11-harness-design.md  2026-04-11-harness-implementation.md  2026-04-11-multi-repo-support.md  2026-04-11-observability-and-stateful-sessions-design.md  2026-04-11-observability-and-stateful-sessions-plan.md  2026-04-11-superseded-design.md  2026-04-11-superseded-implementation.md  2026-04-12-github-issue-import-design.md  2026-04-12-github-issue-import.md  2026-04-12-per-stage-agent-model-design.md  2026-04-12-per-stage-agent-model.md  2026-04-12-repo-settings-design.md  2026-04-12-repo-settings-plan.md  2026-04-12-security-audit-design.md  2026-04-12-security-audit-plan.md  2026-04-14-metrics-dashboard-design.md  2026-04-14-metrics-dashboard-implementation.md  2026-04-14-pipeline-reliability-design.md  2026-04-14-pipeline-reliability-implementation.md  2026-04-14-recovery-paths-design.md  2026-04-14-recovery-paths-implementation.md  2026-04-15-architecture-improvements-design.md  2026-04-15-architecture-improvements-plan.md  2026-04-15-pipeline-pulse-design.md  (+3 more)
e2e/: dashboard.spec.ts  import-metrics.spec.ts  issue-detail.spec.ts  issues.spec.ts  pipeline.spec.ts  settings-mutations.spec.ts  settings.spec.ts
migrations/: env.py
static/: app.js
templates/: _actions.html  _agents_table.html  _api_keys_field.html  _dashboard_table.html  _edit_ticket_form.html  _notifications_field.html  _progress.html  _questions_form.html  _repos_table.html  _results.html  _running.html  _server_settings_field.html  _source_root_field.html  _stage_counters.html  _timeline.html  _token_field.html  base.html  dashboard.html  issue_detail.html  issue_new.html  metrics.html  settings.html  stage_detail.html
tests/: test_agents.py  test_auth.py  test_config.py  test_context.py  test_context_sessions.py  test_csrf.py  test_db.py  test_db_sessions.py  test_events.py  test_executor.py  test_frontmatter.py  test_github.py  test_harness.py  test_harness_models.py  test_harness_streaming.py  test_integration.py  test_integration_streaming.py  test_issue_routes.py  test_metrics.py  test_models.py  test_multi_repo_integration.py  test_notifications.py  test_pipeline.py  test_pipeline_pulse.py  test_pipeline_routes.py  test_plan.py  test_routes.py  test_routes_streaming.py  test_session_models.py  test_settings_routes.py  test_streaming_adapter.py  test_tickets.py  test_validation.py  test_worktree.py
(+62 files in other folders)
