[project]
name = "superseded"
version = "0.1.0"
description = "Local-first agentic pipeline tool — write tickets, delegate the rest"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "aiosqlite>=0.21.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.10.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[project.scripts]
superseded = "superseded.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superseded"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]